finished signup endpoint

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 <body>
     <header>
         <h1>HOME CUSTODIAN</h1>
+        <p>What needs doing. And when. And how.</p>
         <nav>
             <ul>
                 <li></li>
