--- a/public/index.html
+++ b/public/index.html
@@ -17,26 +17,20 @@
         <p>What needs doing. And when. And how.</p>
         <nav>
             <ul>
-                <li></li>
+                <li>Sign In</li>
+                <li>Sign Up</li>
+                <li><a href="#assets">Assets</a></li>
+                <li><a href="">Add New Asset</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section id="assets">
-            <h2>Assets</h2>
-            <p>Manage your assets efficiently with our API.</p>
+            <h2>Critical Maintenence Tasks</h2>
+            <p></p>
         </section>
 
-        <section id="documentation">
-            <h2>API Documentation</h2>
-            <p>Refer to our API documentation for detailed information on how to use the endpoints.</p>
-        </section>
-
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>If you have any questions, feel free to reach out via our contact page.</p>
-        </section>
     </main>
 
     <footer>
